source version set to 1.6 + sonar small fixes (editpage)
git-svn-id: svn://109.206.40.61@147 62292e2b-fded-4b55-83dd-b5fccdba3bda